--- a/index.html
+++ b/index.html
@@ -1,54 +1,7 @@
+
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Rubik', sans-serif;
-      background-color: #1a1a1a;
-      color: #fff;
-      padding: 20px;
-      max-width: 800px;
-      margin: auto;
-    }
-    h1, h2 {
-      color: #ff4d4d;
-    }
-    details {
-      background-color: #2b2b2b;
-      padding: 10px;
-      border-radius: 8px;
-      margin-bottom: 10px;
-    }
-    summary {
-      font-size: 18px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    li {
-      margin-bottom: 5px;
-    }
-    input[type="checkbox"] {
-      margin-right: 10px;
-      transform: scale(1.2);
-    }
-    .sub-details {
-      background-color: #3a3a3a;
-      padding: 8px;
-      border-radius: 6px;
-      margin-top: 5px;
-    }
-    @media (max-width: 600px) {
-      body {
-        padding: 10px;
-      }
-      summary {
-        font-size: 16px;
-      }
-    }
-  </style>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Plan Runmageddon</title>
@@ -102,6 +55,177 @@
 <body>
   <h1>🔥 Plan Runmageddon (2 tygodnie)</h1>
 
+  <details>
+    <summary>Dzień 1 – Interwały (lekki bieg)</summary>
+    <ul>
+      <li><input type="checkbox">30s trucht / 90s marsz – powtórz 6x</li>
+      <li><input type="checkbox">5 min rozgrzewka + 5 min schłodzenie</li>
+      <li>➡️ Kondycja i tlen</li>
+    </ul>
+    <strong>Posiłki:</strong>
+    <ul>
+      <li>
+        Śniadanie: Owsianka z masłem orzechowym i jabłkiem (~550 kcal)
+        <details class="sub-details">
+          <summary>Gramatura</summary>
+          - Płatki owsiane: 50g<br>
+          - Mleko 2%: 200ml<br>
+          - Masło orzechowe: 15g<br>
+          - Jabłko: 1 średnie (150g)
+        </details>
+      </li>
+      <li>
+        Obiad: Kurczak z kaszą gryczaną i surówką z marchewki (~750 kcal)
+        <details class="sub-details">
+          <summary>Gramatura</summary>
+          - Pierś z kurczaka: 150g<br>
+          - Kasza gryczana: 60g (waga surowa)<br>
+          - Marchewka: 100g<br>
+          - Oliwa: 10g
+        </details>
+      </li>
+      <li>
+        Kolacja: Jajka sadzone z chlebem i szpinakiem (~700 kcal)
+        <details class="sub-details">
+          <summary>Gramatura</summary>
+          - Jajka: 3 sztuki<br>
+          - Chleb pełnoziarnisty: 2 kromki (~60g)<br>
+          - Szpinak mrożony: 100g<br>
+          - Oliwa: 10g
+        </details>
+      </li>
+    </ul>
+  </details>
+
+  
+<details>
+  <summary>Dzień 2 – Core + góra (bez cardio)</summary>
+  <ul>
+    <li><input type="checkbox">Plank 3x max</li>
+    <li><input type="checkbox">Mountain climbers 3x30s</li>
+    <li><input type="checkbox">Pompki (lub na kolanach) 3x max</li>
+    <li><input type="checkbox">Wiosłowanie gumą/hantlami</li>
+    <li>➡️ Stabilizacja i siła</li>
+  </ul>
+  <strong>Posiłki:</strong>
+  <ul>
+    <li>Śniadanie: Jajecznica z chlebem i pomidorem (~600 kcal)
+      <details class="sub-details"><summary>Gramatura</summary>
+      - Jajka: 3 sztuki<br>
+      - Chleb pełnoziarnisty: 2 kromki (~60g)<br>
+      - Pomidor: 1 duży (150g)<br>
+      - Masło klarowane: 10g</details></li>
+    <li>Obiad: Fasolka po bretońsku z indykiem i ryżem (~800 kcal)
+      <details class="sub-details"><summary>Gramatura</summary>
+      - Fasola biała: 150g<br>
+      - Pierś z indyka: 100g<br>
+      - Passata pomidorowa: 150g<br>
+      - Cebula + czosnek: 50g<br>
+      - Oliwa: 10g<br>
+      - Ryż basmati: 50g (waga surowa)</details></li>
+    <li>Kolacja: Twaróg z jogurtem i ogórkiem (~700 kcal)
+      <details class="sub-details"><summary>Gramatura</summary>
+      - Twaróg półtłusty: 150g<br>
+      - Jogurt naturalny: 100g<br>
+      - Ogórek: 100g<br>
+      - Olej lniany: 10g</details></li>
+  </ul>
+</details>
+
+<details>
+  <summary>Dzień 3 – Active recovery (luz)</summary>
+  <ul>
+    <li><input type="checkbox">Spacer, joga lub rower 30-45 min</li>
+    <li>➡️ Regeneracja z ruchem</li>
+  </ul>
+  <strong>Posiłki:</strong>
+  <ul>
+    <li>Śniadanie: Płatki owsiane z jogurtem i orzechami (~550 kcal)
+      <details class="sub-details"><summary>Gramatura</summary>
+      - Płatki owsiane: 50g<br>
+      - Jogurt naturalny: 150g<br>
+      - Orzechy włoskie: 15g</details></li>
+    <li>Obiad: Pierś z indyka + ziemniaki + kapusta kiszona (~850 kcal)
+      <details class="sub-details"><summary>Gramatura</summary>
+      - Pierś z indyka: 150g<br>
+      - Ziemniaki: 250g<br>
+      - Kapusta kiszona: 100g<br>
+      - Oliwa: 10g</details></li>
+    <li>Kolacja: Kanapki z hummusem, jajkiem i warzywami (~700 kcal)
+      <details class="sub-details"><summary>Gramatura</summary>
+      - Chleb pełnoziarnisty: 2 kromki (~60g)<br>
+      - Hummus: 40g<br>
+      - Jajko: 1 sztuka<br>
+      - Warzywa: 100g</details></li>
+  </ul>
+</details>
+
+<details>
+  <summary>Dzień 4 – Obwodówka</summary>
+  <ul>
+    <li><input type="checkbox">10 przysiadów</li>
+    <li><input type="checkbox">10 burpees</li>
+    <li><input type="checkbox">20 jumping jacks</li>
+    <li><input type="checkbox">10 wykroków</li>
+    <li>➡️ Wytrzymałość mięśni</li>
+  </ul>
+  <strong>Posiłki:</strong>
+  <ul>
+    <li>(kopiuj z Dnia 1)</li>
+  </ul>
+</details>
+
+<details>
+  <summary>Dzień 5 – Bieg ciągły</summary>
+  <ul>
+    <li><input type="checkbox">5-6 km spokojnym tempem</li>
+    <li>➡️ Test terenu i wydolności</li>
+  </ul>
+  <strong>Posiłki:</strong>
+  <ul>
+    <li>(kopiuj z Dnia 2)</li>
+  </ul>
+</details>
+
+<details>
+  <summary>Dzień 6 – Core again</summary>
+  <ul>
+    <li><input type="checkbox">Powtórka z dnia 2</li>
+    <li>➡️ Wzmocnienie bazy</li>
+  </ul>
+  <strong>Posiłki:</strong>
+  <ul>
+    <li>(kopiuj z Dnia 3)</li>
+  </ul>
+</details>
+
+<details>
+  <summary>Dzień 7 – Rest & stretch</summary>
+  <ul>
+    <li><input type="checkbox">Stretching, mobilizacja, odpoczynek</li>
+    <li>➡️ Regeneracja</li>
+  </ul>
+  <strong>Posiłki:</strong>
+  <ul>
+    <li>(kopiuj z Dnia 1)</li>
+  </ul>
+</details>
+
+
+<h2>🔥 Codziennie</h2>
+  <ul>
+    <li><input type="checkbox">Plank min. 1 min</li>
+    <li><input type="checkbox">Pij wodę</li>
+    <li><input type="checkbox">Śpij min. 7h</li>
+  </ul>
+
+  <h2>🛟 Co dorzucić, jak będziesz głodny (200–300 kcal)</h2>
+  <ul>
+    <li><strong>Szybkie + sycące:</strong> Serek wiejski + pestki dyni / 2 jajka + ogórek / Twaróg z jogurtem i kakao</li>
+    <li><strong>Na słodko:</strong> Banan + masło orzechowe / Owsianka instant / Jogurt z miodem i orzechami</li>
+    <li><strong>Na zajawkę:</strong> Guma bez cukru, woda z cytryną + szczypta soli, herbata ziołowa</li>
+  </ul>
+
   <script>
     // Zapis i odczyt checkboxów w localStorage
     document.addEventListener('DOMContentLoaded', () => {
@@ -116,19 +240,5 @@
       });
     });
   </script>
-<script>
-  // Zapis i odczyt checkboxów w localStorage
-  document.addEventListener('DOMContentLoaded', () => {
-    const checkboxes = document.querySelectorAll('input[type="checkbox"]');
-    checkboxes.forEach((checkbox, i) => {
-      const id = 'checkbox_' + i;
-      checkbox.id = id;
-      checkbox.checked = localStorage.getItem(id) === 'true';
-      checkbox.addEventListener('change', () => {
-        localStorage.setItem(id, checkbox.checked);
-      });
-    });
-  });
-</script>
 </body>
 </html>
