--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+  <link rel="apple-touch-icon" href="icon.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Runmageddon Plan">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Plan Runmageddon</title>
