--- a/index.html
+++ b/index.html
@@ -210,6 +210,58 @@
   <div class="static-item">🧠 Mental > zmęczenie. Skup się na kolejnych krokach, nie całości</div>
   <div class="static-item">🧃 Przed biegiem zjedz lekkie śniadanie: np. owsianka z bananem albo tosty z jajkiem</div>
 </details>
+  <details>
+<summary>📖 Przepisy – szczegóły każdego dnia</summary>
+
+<details>
+  <summary class="check-container">🥣 Owsianka z jabłkiem i masłem orzechowym</summary>
+  <div class="static-item">• 60g płatków owsianych</div>
+  <div class="static-item">• 200ml mleka lub napoju roślinnego</div>
+  <div class="static-item">• 1 jabłko (150g)</div>
+  <div class="static-item">• 15g masła orzechowego</div>
+  <div class="static-item">👉 Gotuj płatki z mlekiem ok. 5-7 min, dodaj jabłko i masło na koniec.</div>
+</details>
+
+<details>
+  <summary class="check-container">🍗 Kurczak z ryżem i surówką</summary>
+  <div class="static-item">• 150g piersi z kurczaka (smażony lub gotowany)</div>
+  <div class="static-item">• 70g ryżu (waga przed ugotowaniem)</div>
+  <div class="static-item">• 100g surówki z kapusty lub marchwi</div>
+  <div class="static-item">👉 Ugotuj ryż, usmaż lub ugotuj kurczaka, podaj z surówką.</div>
+</details>
+
+<details>
+  <summary class="check-container">🍛 Fasolka po bretońsku z indykiem</summary>
+  <div class="static-item">• 120g fasoli w sosie pomidorowym z puszki</div>
+  <div class="static-item">• 100g mielonego indyka</div>
+  <div class="static-item">• 150g ziemniaków</div>
+  <div class="static-item">👉 Podsmaż indyka, dodaj fasolkę z puszki, duś kilka minut. Podaj z ziemniakami.</div>
+</details>
+
+<details>
+  <summary class="check-container">🍝 Makaron pełnoziarnisty z mięsem i sosem</summary>
+  <div class="static-item">• 75g makaronu pełnoziarnistego</div>
+  <div class="static-item">• 120g mielonego mięsa</div>
+  <div class="static-item">• 100ml sosu pomidorowego</div>
+  <div class="static-item">👉 Ugotuj makaron, podsmaż mięso, zalej sosem i wymieszaj.</div>
+</details>
+
+<details>
+  <summary class="check-container">🍽️ Indyk z kaszą i surówką</summary>
+  <div class="static-item">• 150g indyka (pierś lub gulasz)</div>
+  <div class="static-item">• 60g kaszy gryczanej</div>
+  <div class="static-item">• 100g surówki</div>
+  <div class="static-item">👉 Ugotuj kaszę, podsmaż lub ugotuj indyka, dodaj surówkę.</div>
+</details>
+
+<details>
+  <summary class="check-container">🥚 Twaróg z warzywami i chlebem</summary>
+  <div class="static-item">• 150g twarogu półtłustego</div>
+  <div class="static-item">• 70g chleba pełnoziarnistego (2 kromki)</div>
+  <div class="static-item">• 100g warzyw (ogórek, pomidor, papryka)</div>
+  <div class="static-item">👉 Wymieszaj twaróg z warzywami i podaj z chlebem.</div>
+</details>
+</details>
 
 </body>
 </html>
