--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
 
-<h1>🏃‍♂️ Finalny Plan Treningowy Runmageddon (2 tyg.)</h1>
+<h1>🏃‍Runmageddon</h1>
 
   <details>
 <summary>✅ Tydzień 1</summary>
