--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
   <div class="static-item">👉 Wymieszaj twaróg z warzywami i podaj z chlebem.</div>
 </details>
 </details>
+    <button onclick="location.reload()">🔁 Odśwież</button>
 
 </body>
 </html>
