--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <details>
 <summary>✅ Tydzień 1</summary>
-  <details><summary class="check-container">Poniedziałek</summary>
+  <details><summary class="check-container">Sobota</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">Marszobieg 20 min (30 sek trucht / 90 sek marsz)</label>
     <label class="check-container"><input type="checkbox">2× 20 sek plank</label>
@@ -94,7 +94,7 @@
     <label class="check-container"><input type="checkbox">🍗 Kurczak z ryżem i surówką</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Wtorek</summary>
+  <details><summary class="check-container">Niedziela</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">3× 15 przysiadów</label>
     <label class="check-container"><input type="checkbox">3× 10 pompek</label>
@@ -105,7 +105,7 @@
     <label class="check-container"><input type="checkbox">🍛 Fasolka po bretońsku z indykiem + ziemniaki</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Środa</summary>
+  <details><summary class="check-container">Poniedziałek</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">30 min spacer/joga/stretching</label>
     <h2>Jedzenie</h2>
@@ -113,7 +113,8 @@
     <label class="check-container"><input type="checkbox">🍽️ Indyk z kaszą gryczaną + surówka z marchewki</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Czwartek</summary>
+  <details><summary class="check-container">Wtorek
+      </summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">6× (30 sek sprint / 90 sek marsz)</label>
     <label class="check-container"><input type="checkbox">2× 5 burpees</label>
@@ -122,7 +123,7 @@
     <label class="check-container"><input type="checkbox">🍝 Makaron pełnoziarnisty z sosem pomidorowym i mięsem mielonym</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Piątek</summary>
+  <details><summary class="check-container">Środa</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">2× 5 min: przysiady, pompki, mountain climbers, sprawlers</label>
     <h2>Jedzenie</h2>
@@ -130,7 +131,7 @@
     <label class="check-container"><input type="checkbox">🍗 Kurczak z ryżem i surówką</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Sobota</summary>
+  <details><summary class="check-container">Czwartek</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">30 min (2 min trucht / 2 min marsz)</label>
     <label class="check-container"><input type="checkbox">2× zwis na drążku lub farmer’s carry</label>
@@ -140,7 +141,7 @@
     <label class="check-container"><input type="checkbox">🍽️ Indyk z kaszą gryczaną + surówka</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Niedziela</summary>
+  <details><summary class="check-container">Piątek</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">Spacer, rozciąganie, regeneracja</label>
     <h2>Jedzenie</h2>
@@ -152,7 +153,7 @@
 
 <details>
 <summary>🚀 Tydzień 2</summary>
-  <details><summary class="check-container">Poniedziałek</summary>
+  <details><summary class="check-container">Sobota</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">25 min biegu (5 min bieg / 1 min marsz)</label>
     <label class="check-container"><input type="checkbox">3× sprint pod górkę (~50 m)</label>
@@ -161,7 +162,7 @@
     <label class="check-container"><input type="checkbox">🍗 Kurczak z ryżem i surówką</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Wtorek</summary>
+  <details><summary class="check-container">Niedziela</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">4× 10 wykroków</label>
     <label class="check-container"><input type="checkbox">4× 10 pompek</label>
@@ -172,7 +173,7 @@
     <label class="check-container"><input type="checkbox">🍛 Fasolka po bretońsku z indykiem + ziemniaki</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Środa</summary>
+  <details><summary class="check-container">Poniedziałek</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">20 min bieg (co 2 min sprint 10 sek)</label>
     <label class="check-container"><input type="checkbox">Wejścia na ławkę, czołganie, noszenie ciężaru</label>
@@ -181,7 +182,7 @@
     <label class="check-container"><input type="checkbox">🍽️ Indyk z kaszą gryczaną + surówka</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Czwartek</summary>
+  <details><summary class="check-container">Wtorek</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">Regeneracja</label>
     <h2>Jedzenie</h2>
@@ -189,7 +190,7 @@
     <label class="check-container"><input type="checkbox">🍝 Makaron pełnoziarnisty z sosem pomidorowym i mięsem mielonym</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Piątek</summary>
+  <details><summary class="check-container">Środa</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">Interwały 1 min szybko / 1 min trucht × 5</label>
     <label class="check-container"><input type="checkbox">3× 5 burpees</label>
@@ -199,7 +200,7 @@
     <label class="check-container"><input type="checkbox">🍗 Kurczak z ryżem i surówką</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Sobota</summary>
+  <details><summary class="check-container">Czwartek</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">5 km: bieg, pompki, przysiady, czołganie, burpees</label>
     <h2>Jedzenie</h2>
@@ -207,7 +208,7 @@
     <label class="check-container"><input type="checkbox">🍽️ Indyk z kaszą gryczaną + surówka</label>
     <label class="check-container"><input type="checkbox">🥚 Twaróg z warzywami + chleb pełnoziarnisty</label>
   </details>
-  <details><summary class="check-container">Niedziela</summary>
+  <details><summary class="check-container">Piątek</summary>
     <h2>Trening</h2>
     <label class="check-container"><input type="checkbox">Regeneracja + mentalne przygotowanie</label>
     <h2>Jedzenie</h2>
